--- a/views/places/my-list.hbs
+++ b/views/places/my-list.hbs
@@ -22,7 +22,7 @@
     <!-- Card content -->
     <div class="card-body d-flex flex-row">
       <!-- Avatar -->
-      <img src="{{creator.picture}}" class="avatar-img" height="50px" width="50px" alt="avatar">
+      <img src="{{creator.picture}}" class="avatar-img"alt="avatar">
       <!-- Content -->
       <div>
         <!-- Title -->
