--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,7 +25,7 @@
               <button>Sign Out</button>
             </form>
             {{else}}
-            <a href="/places/map">Map</a>
+            <a href="/places/map"style="margin-right: 20px;">Map</a>
             <a href="/">Feed</a>
             <a href="/authentication/sign-in">Sign In</a>
             <a href="/authentication/sign-up">Sign Up</a>
